--- a/Automobile/src/building blocks/Automobile.Core/Automobile.Core.csproj
+++ b/Automobile/src/building blocks/Automobile.Core/Automobile.Core.csproj
@@ -3,5 +3,9 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="8.6.2" />
+    <PackageReference Include="mediatr" Version="8.0.1" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.3.3" />
+  </ItemGroup>
 </Project>
