--- a/Automobile/src/services/Automobile.Proprietarios.API/Automobile.Proprietarios.API.csproj
+++ b/Automobile/src/services/Automobile.Proprietarios.API/Automobile.Proprietarios.API.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.3">
       <PrivateAssets>all</PrivateAssets>
@@ -21,6 +22,10 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\Automobile.Core\Automobile.Core.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Application\Events\" />
+    <Folder Include="Application\Queries\" />
   </ItemGroup>
 
 
