--- a/Automobile/src/services/Automobile.Proprietarios.API/Automobile.Proprietarios.API.csproj
+++ b/Automobile/src/services/Automobile.Proprietarios.API/Automobile.Proprietarios.API.csproj
@@ -22,6 +22,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\Automobile.Core\Automobile.Core.csproj" />
+    <ProjectReference Include="..\..\building blocks\Automobile.WebAPI.Core\Automobile.WebAPI.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Application\Queries\" />
