--- a/src/building blocks/Automobile.Core/Automobile.Core.csproj
+++ b/src/building blocks/Automobile.Core/Automobile.Core.csproj
@@ -7,5 +7,6 @@
     <PackageReference Include="FluentValidation" Version="10.4.0" />
     <PackageReference Include="mediatr" Version="10.0.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.1" />
+    <PackageReference Include="System.Text.Json" Version="6.0.2" />
   </ItemGroup>
 </Project>
