refact: Refatorando Proprietario.API

--- a/src/services/Automobile.Proprietarios.Application/Automobile.Proprietarios.Application.csproj
+++ b/src/services/Automobile.Proprietarios.Application/Automobile.Proprietarios.Application.csproj
@@ -27,4 +27,8 @@
     <ProjectReference Include="..\Automobile.Proprietarios.Infra.EF\Automobile.Proprietarios.Infra.EF.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mapper\" />
+  </ItemGroup>
+
 </Project>
