--- a/src/services/Automobile.Proprietarios.Domain/Automobile.Proprietarios.Domain.csproj
+++ b/src/services/Automobile.Proprietarios.Domain/Automobile.Proprietarios.Domain.csproj
@@ -8,4 +8,8 @@
     <ProjectReference Include="..\..\building blocks\Automobile.Core\Automobile.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="AggregatesModel\ProprietarioAggregate\" />
+  </ItemGroup>
+
 </Project>
