--- a/tests/services/Automobile.Proprietarios.Application.Test/Automobile.Proprietarios.Application.Test.csproj
+++ b/tests/services/Automobile.Proprietarios.Application.Test/Automobile.Proprietarios.Application.Test.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -7,14 +7,16 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Fake\**" />
+    <EmbeddedResource Remove="Fake\**" />
+    <None Remove="Fake\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.9.4" />
     <PackageReference Include="MSTest.TestAdapter" Version="2.2.3" />
     <PackageReference Include="MSTest.TestFramework" Version="2.2.3" />
     <PackageReference Include="coverlet.collector" Version="3.0.2" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Fake\" />
   </ItemGroup>
 
   <ItemGroup>
