--- a/src/services/Automobile.Proprietarios.Application/Automobile.Proprietarios.Application.csproj
+++ b/src/services/Automobile.Proprietarios.Application/Automobile.Proprietarios.Application.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Mapper\" />
+    <Folder Include="Services\Endereco\" />
   </ItemGroup>
 
 </Project>
