--- a/src/services/Automobile.Application/Automobile.Application.csproj
+++ b/src/services/Automobile.Application/Automobile.Application.csproj
@@ -6,12 +6,10 @@
 
   <ItemGroup>
     <None Remove="Queries\Proprietario\Scripts\ListaProprietario.sql" />
-    <None Remove="Queries\Proprietario\Scripts\ObterProprietarioPeloNumeroDocumento.sql" />
     <None Remove="Queries\Proprietario\Scripts\ObterProprietarioPorId.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Queries\Proprietario\Scripts\ObterProprietarioPeloNumeroDocumento.sql" />
     <EmbeddedResource Include="Queries\Proprietario\Scripts\ListaProprietario.sql" />
     <EmbeddedResource Include="Queries\Proprietario\Scripts\ObterProprietarioPorId.sql" />
   </ItemGroup>
@@ -25,6 +23,10 @@
     <ProjectReference Include="..\..\building blocks\Automobile.Database.SqlServer\Automobile.Database.SqlServer.csproj" />
     <ProjectReference Include="..\Automobile.Domain\Automobile.Domain.csproj" />
     <ProjectReference Include="..\Automobile.Infra.EF\Automobile.Infra.EF.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Queries\Marca\" />
   </ItemGroup>
 
 </Project>
