--- a/src/services/Automobile.Application/Automobile.Application.csproj
+++ b/src/services/Automobile.Application/Automobile.Application.csproj
@@ -5,13 +5,15 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Queries\Proprietario\Scripts\ListaProprietario.sql" />
-    <None Remove="Queries\Proprietario\Scripts\ObterProprietarioPorId.sql" />
+    <None Remove="Queries\Scripts\ListaMarcas.sql" />
+    <None Remove="Queries\Scripts\ListaProprietarios.sql" />
+    <None Remove="Queries\Scripts\ObterProprietarioPorId.sql" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="Queries\Proprietario\Scripts\ListaProprietario.sql" />
-    <EmbeddedResource Include="Queries\Proprietario\Scripts\ObterProprietarioPorId.sql" />
+    <EmbeddedResource Include="Queries\Scripts\ListaMarcas.sql" />
+    <EmbeddedResource Include="Queries\Scripts\ListaProprietarios.sql" />
+    <EmbeddedResource Include="Queries\Scripts\ObterProprietarioPorId.sql" />
   </ItemGroup>
 
   <ItemGroup>
@@ -23,10 +25,6 @@
     <ProjectReference Include="..\..\building blocks\Automobile.Database.SqlServer\Automobile.Database.SqlServer.csproj" />
     <ProjectReference Include="..\Automobile.Domain\Automobile.Domain.csproj" />
     <ProjectReference Include="..\Automobile.Infra.EF\Automobile.Infra.EF.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Queries\Marca\" />
   </ItemGroup>
 
 </Project>
