--- a/src/services/Automobile.API/Automobile.API.csproj
+++ b/src/services/Automobile.API/Automobile.API.csproj
@@ -8,6 +8,14 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Dockerfile.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Dockerfile.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="10.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.15" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="5.0.15">
