--- a/src/web/Automobile.MVC/Automobile.MVC.csproj
+++ b/src/web/Automobile.MVC/Automobile.MVC.csproj
@@ -11,10 +11,12 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.RuntimeCompilation" Version="5.0.12" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.11.1" />
+    <PackageReference Include="Refit" Version="6.3.2" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\building blocks\Automobile.Core\Automobile.Core.csproj" />
+    <ProjectReference Include="..\..\building blocks\Automobile.WebAPI.Core\Automobile.WebAPI.Core.csproj" />
   </ItemGroup>
 
 </Project>
