feat: Implementando dockercompose

--- a/src/services/Automobile.API/Dockerfile
+++ b/src/services/Automobile.API/Dockerfile
@@ -7,18 +7,18 @@ EXPOSE 443
 
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
-COPY ["src/services/Automobile.API/Automobile.API.csproj", "src/services/Automobile.API/"]
-COPY ["src/services/Automobile.Integracao/Automobile.Integracao.csproj", "src/services/Automobile.Integracao/"]
-COPY ["src/building blocks/Automobile.Core/Automobile.Core.csproj", "src/building blocks/Automobile.Core/"]
-COPY ["src/building blocks/Automobile.MessageBus/Automobile.MessageBus.csproj", "src/building blocks/Automobile.MessageBus/"]
-COPY ["src/services/Automobile.Application/Automobile.Application.csproj", "src/services/Automobile.Application/"]
-COPY ["src/building blocks/Automobile.Database.SqlServer/Automobile.Database.SqlServer.csproj", "src/building blocks/Automobile.Database.SqlServer/"]
-COPY ["src/services/Automobile.Domain/Automobile.Domain.csproj", "src/services/Automobile.Domain/"]
-COPY ["src/services/Automobile.Infra.EF/Automobile.Infra.EF.csproj", "src/services/Automobile.Infra.EF/"]
-COPY ["src/building blocks/Automobile.WebAPI.Core/Automobile.WebAPI.Core.csproj", "src/building blocks/Automobile.WebAPI.Core/"]
-RUN dotnet restore "src/services/Automobile.API/Automobile.API.csproj"
+COPY ["./services/Automobile.API/Automobile.API.csproj", "services/Automobile.API/"]
+COPY ["./services/Automobile.Integracao/Automobile.Integracao.csproj", "services/Automobile.Integracao/"]
+COPY ["./building blocks/Automobile.Core/Automobile.Core.csproj", "building blocks/Automobile.Core/"]
+COPY ["./building blocks/Automobile.MessageBus/Automobile.MessageBus.csproj", "building blocks/Automobile.MessageBus/"]
+COPY ["./services/Automobile.Application/Automobile.Application.csproj", "services/Automobile.Application/"]
+COPY ["./building blocks/Automobile.Database.SqlServer/Automobile.Database.SqlServer.csproj", "building blocks/Automobile.Database.SqlServer/"]
+COPY ["./services/Automobile.Domain/Automobile.Domain.csproj", "services/Automobile.Domain/"]
+COPY ["./services/Automobile.Infra.EF/Automobile.Infra.EF.csproj", "services/Automobile.Infra.EF/"]
+COPY ["./building blocks/Automobile.WebAPI.Core/Automobile.WebAPI.Core.csproj", "building blocks/Automobile.WebAPI.Core/"]
+RUN dotnet restore "services/Automobile.API/Automobile.API.csproj"
 COPY . .
-WORKDIR "/src/src/services/Automobile.API"
+WORKDIR "services/Automobile.API"
 RUN dotnet build "Automobile.API.csproj" -c Release -o /app/build
 
 FROM build AS publish
