--- a/docker/automobile.yml
+++ b/docker/automobile.yml
@@ -8,6 +8,9 @@ services:
         environment:
             RABBITMQ_DEFAULT_USER: "automobile"
             RABBITMQ_DEFAULT_PASS: "automobile"
+        ports:
+            - 5672:5672
+            - 15672:15672
 
     sql-server:
         image: mcr.microsoft.com/mssql/server:2019-latest
@@ -21,7 +24,7 @@ services:
 
     web-mvc:
         image: automobile-web-mvc:latest
-        container_name: automobile-web-mvc
+        #container_name: automobile-web-mvc
         build:
             context: ../src
             dockerfile: ./web/Automobile.MVC/Dockerfile
@@ -60,7 +63,7 @@ services:
             dockerfile: ./services/Automobile.API/Dockerfile      
         restart: always             
         environment: 
-            - ASPNETCORE_ENVIRONMENT=Production
+            - ASPNETCORE_ENVIRONMENT=Development
             - ASPNETCORE_URLS=https://+:5201;http://+5202
             - ASPNETCORE_Kestrel__Certificates__Default__Password=automobile
             - ASPNETCORE_Kestrel__Certificates__Default__Path=/https/automobile-certificate.pfx
