build: Configurando rede docker

--- a/src/web/Automobile.MVC/appsettings.Production.json
+++ b/src/web/Automobile.MVC/appsettings.Production.json
@@ -1,5 +1,5 @@
 {
-  "AutomobileUrl": "http://automobile-web-mvc:5401",
+  "AutomobileUrl": "https://automobile-api:5401",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
