--- a/src/services/Automobile.API/Dockerfile
+++ b/src/services/Automobile.API/Dockerfile
@@ -3,8 +3,10 @@
 FROM mcr.microsoft.com/dotnet/aspnet:5.0 AS base
 WORKDIR /app
 EXPOSE 80
-EXPOSE 44319
+EXPOSE 443
 
+FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
+WORKDIR /src
 FROM mcr.microsoft.com/dotnet/sdk:5.0 AS build
 WORKDIR /src
 COPY ["./services/Automobile.API/Automobile.API.csproj", "services/Automobile.API/"]
